assert-struct/tests/snapshots/enum_struct_patterns__enum_struct_multiple_field_failures.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/enum_struct_multiple_field_failures.rs:32:19
   |
32 |             name: "get_items",  // This will fail
   |                   ^^^^^^^^^^^ got "select_users"
33 |             params: ["name", "age"],  // This will also fail (wrong length)
   |                     ^ expected slice with 2 elements, got ["id"]
34 |             limit: Some(> 50),  // This will also fail
   |                         ^^^^ got 25
